--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "npm run generate-pdfs && astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "generate-pdfs": "node scripts/generate-pdfs.js"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -19,6 +20,7 @@
     "@astrojs/tailwind": "^5.1.2",
     "astro": "^5.1.0",
     "astro-icon": "^1.1.5",
+    "markdown-pdf": "^11.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
